# gatehouse

./: Cargo.toml  LICENSE  README.md  build.rs
proto/: actors.proto  common.proto  entities.proto  gatehouse.proto  groups.proto  policies.proto  roles.proto  targets.proto
src/cli/: cli.rs
src/cli/args/: actor.rs  mod.rs  target.rs
src/cli/cmds/: actor.rs  mod.rs  target.rs
src/lib/: actor.rs  ds.rs  entity.rs  group.rs  helpers.rs  lib.rs  msgs.rs  policy.rs  role.rs  svc.rs  target.rs
src/lib/storage/: etcd.rs  file.rs  mod.rs  nil.rs
src/server/: server.rs
tests/: integration_tests.rs
tests/common/: mod.rs
