[package]
name    = "gatehouse"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "gatehouse-server"
path = "src/server/server.rs"

# [[bin]]
# name = "gate"
# path = "src/cli/cli.rs"

[dependencies]
clap       = { version = "4.0", features = ["derive"] }
fasthash   = "0.4.0"
flume      = "0.10"
prost      = "0.11"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio      = { version = "1.21", features = ["full"] }
tonic      = "0.8"
tonic-web  = "0.4.0"

[dev-dependencies]
async-recursion = "1.0.0"

[build-dependencies]
tonic-build = "0.8"
